80
For those cats not killed by curiosity,
{noformat}
scala> val (is: Option[String], not: Option[String]) = ("a", "b") match {
  case ("b", _) => (Some("Dog"), None)
  case _ => (Some((1,2)), Some("Dog"))
}
<console>:7: warning: non-variable type argument String in type pattern Option[String] is unchecked since it is eliminated by erasure
       val (is: Option[String], not: Option[String]) = ("a", "b") match {
                ^
<console>:7: error: pattern type is incompatible with expected type;
 found   : Option[String]
 required: Some[java.io.Serializable]
       val (is: Option[String], not: Option[String]) = ("a", "b") match {
                ^
{noformat}
